# chess

./: .gitignore  CMakeLists.txt  Makefile  README.md  settings.gradle
client/: build.gradle
client/src/main/java/me/pepperjackdev/client/: ClientApplication.java
client/src/main/java/me/pepperjackdev/client/controller/: Controller.java
client/src/test/java/me/pepperjackdev/client/: ClientApplicationTests.java
core/: build.gradle
core/src/main/java/me/pepperjackdev/chess/core/: Game.java  Side.java
core/src/main/java/me/pepperjackdev/chess/core/action/: Action.java  DrawAction.java  MoveAction.java
core/src/main/java/me/pepperjackdev/chess/core/data/: Data.java  MutableData.java  Result.java
core/src/main/java/me/pepperjackdev/chess/core/game/: Game.java  Side.java
core/src/main/java/me/pepperjackdev/chess/io/: PlacementConverter.java  StateConverter.java
core/src/test/java/me/pepperjackdev/chess/io/: PlacementConverterTest.java  StateConverterTest.java
gradle/wrapper/: gradle-wrapper.properties
include/: chess.h  page.h
include/chess/: move.h  piece.h  piece_move_generator.h  state.h
include/chess/io/: fen.h
include/chess/move/: piece_move.h  piece_move_rule.h
include/io/: fen.h
include/ui/: game_page.h  page.h
include/utils/: array.h  optional.h
server/: build.gradle
server/src/main/java/me/pepperjackdev/chess/server/: JacksonConfig.java  ServerApplication.java
server/src/test/java/me/pepperjackdev/chess/server/: ServerApplicationTests.java
src/: chess.c  main.c  page.c
src/chess/: move.c  piece.c  piece_move_generator.c  state.c
src/chess/io/: fen.c
src/chess/move/: piece_move.c  piece_move_rule.c
src/io/: fen.c
src/main/java/me/pepperjackdev/chess/: Main.java
src/ui/: game_page.c  page.c
src/utils/: array.c
(+40 files in other folders)
